src/test/deca/context/valid/testWhile.deca
// Description : Teste While
{
	int y = 10;
	int x = 10;
	while (x > 0) {
		x = x - 1;
		println(x);
	}
	while ( y > 0) {
		y = y-1;
		println(y);
	}
}
