src/test/deca/context/invalid/testCastWrongtypes.deca
// Description : types incompatibles pour le cast
{
    int x;
    boolean y = (boolean) (x);
}
